--- a/06-bootstrap4/breakpoints/index.html
+++ b/06-bootstrap4/breakpoints/index.html
@@ -16,40 +16,19 @@
             crossorigin="anonymous"
         />
 
-        <title>Utilities</title>
+        <title>Breakpoints</title>
     </head>
     <body>
-        <div class="container">
-            <h1 class="text-center display-1">Utilities</h1>
+        <div class="container text-center">
+            <h1 class="display-3 ">Breakpoints</h1>
+            <button class="btn btn-warning p-sm-5 p-md-0">BUTTON</button>
+            <button class="btn btn-danger p-0 p-sm-2 p-md-3 p-lg-4 pd-xl-5">BUTTON</button>
 
-            <!-- Border -->
-            <h5 class="border border-danger rounded">Give me a border</h5>
-            <h5 class="border-top border-info rounded-top">Give me a border</h5>
-
-            <!-- Padding -->
-            <button class="btn btn-info p-0">p0</button>
-            <button class="btn btn-info p-1">p1</button>
-            <button class="btn btn-info p-2">p2</button>
-            <button class="btn btn-info p-3">p3</button>
-            <button class="btn btn-info p-4">p4</button>
-            <button class="btn btn-info p-5">p5</button>
-
-            <button class="btn btn-info pt-5">pt5</button>
-            <button class="btn btn-info pb-5">pb5</button>
-            <button class="btn btn-info py-5">py5</button>
-
-            <button class="btn btn-info pl-5">pl5</button>
-            <button class="btn btn-info pr-5">pr5</button>
-            <button class="btn btn-info px-5">px5</button>
-            
-            <!-- Margin -->
-            <p class="bg-success text-white m-0">I am M-0</p>
-            <p class="bg-success text-white m-1">I am M-1</p>
-            <p class="bg-success text-white m-2">I am M-2</p>
-            <p class="bg-success text-white m-3">I am M-3</p>
-            <p class="bg-success text-white m-4">I am M-4</p>
-            <p class="bg-success text-white m-5">I am M-5</p>
-
+            <h1 class="display-3">Margin Example</h1>
+            <button class="btn btn-primary p-4 mx-0 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5">Hello</button>
+            <button class="btn btn-primary p-4 mx-0 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5">Hello</button>
+            <button class="btn btn-primary p-4 mx-0 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5">Hello</button>
+            <button class="btn btn-primary p-4 mx-0 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5">Hello</button>
         </div>
 
         <!-- Optional JavaScript -->
