--- a/06-bootstrap4/displayUtility/index.html
+++ b/06-bootstrap4/displayUtility/index.html
@@ -16,42 +16,35 @@
             crossorigin="anonymous"
         />
 
-        <title>Utilities</title>
+        <title>Display</title>
     </head>
     <body>
         <div class="container">
-            <h1 class="text-center display-1">Utilities</h1>
-
-            <!-- Border -->
-            <h5 class="border border-danger rounded">Give me a border</h5>
-            <h5 class="border-top border-info rounded-top">Give me a border</h5>
-
-            <!-- Padding -->
-            <button class="btn btn-info p-0">p0</button>
-            <button class="btn btn-info p-1">p1</button>
-            <button class="btn btn-info p-2">p2</button>
-            <button class="btn btn-info p-3">p3</button>
-            <button class="btn btn-info p-4">p4</button>
-            <button class="btn btn-info p-5">p5</button>
-
-            <button class="btn btn-info pt-5">pt5</button>
-            <button class="btn btn-info pb-5">pb5</button>
-            <button class="btn btn-info py-5">py5</button>
-
-            <button class="btn btn-info pl-5">pl5</button>
-            <button class="btn btn-info pr-5">pr5</button>
-            <button class="btn btn-info px-5">px5</button>
-            
-            <!-- Margin -->
-            <p class="bg-success text-white m-0">I am M-0</p>
-            <p class="bg-success text-white m-1">I am M-1</p>
-            <p class="bg-success text-white m-2">I am M-2</p>
-            <p class="bg-success text-white m-3">I am M-3</p>
-            <p class="bg-success text-white m-4">I am M-4</p>
-            <p class="bg-success text-white m-5">I am M-5</p>
-
+            <h1 class="text-center display-4">Display Utility</h1>
+            <h1 class="border border-danger d-inline">Hello</h1>
+            <span class="border border-danger d-block">Hello</span>
+            <h1 class="d-xl-none">HIDE ME ON XL</h1>
+            <h1 class="d-none d-lg-block d-xl-none">
+                ALWAYS HIDDEN EXCEPT LARGE
+            </h1>
         </div>
 
+        <div class="container">
+            <div class="jumbotron">
+                <h1 class="display-4">Hello, world!</h1>
+                <p class="lead d-none d-md-block">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati cumque facere possimus, odio, quia ullam explicabo quas error incidunt ad quos velit sunt! Provident ad doloribus itaque aliquam perspiciatis soluta vitae doloremque impedit nulla! Iste ratione corporis quo quasi? Reprehenderit sed fugiat, voluptas ipsam modi harum eius inventore quaerat quae asperiores dolore veniam id tenetur possimus ea nobis vero exercitationem.
+                </p>
+                <hr class="my-4" />
+                <p>
+                    It uses utility classes for typography and spacing to space
+                    content out within the larger container.
+                </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button"
+                    >Learn more</a
+                >
+            </div>
+        </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script
