up to javascript

--- a/06-bootstrap4/breakpoints/index.html
+++ b/06-bootstrap4/breakpoints/index.html
@@ -22,7 +22,7 @@
         <div class="container text-center">
             <h1 class="display-3 ">Breakpoints</h1>
             <button class="btn btn-warning p-sm-5 p-md-0">BUTTON</button>
-            <button class="btn btn-danger p-0 p-sm-2 p-md-3 p-lg-4 pd-xl-5">BUTTON</button>
+            <button class="btn btn-danger p-0 p-sm-2 p-md-3 p-lg-4 p-xl-5">BUTTON</button>
 
             <h1 class="display-3">Margin Example</h1>
             <button class="btn btn-primary p-4 mx-0 mx-sm-2 mx-md-3 mx-lg-4 mx-xl-5">Hello</button>
