--- a/17-color-gane/index.html
+++ b/17-color-gane/index.html
@@ -8,12 +8,16 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+        <h1>The Great 
+            <br>
+            <span id="colorDisplay">RGB</span> 
+            <br>
+            Color Game</h1>
         <div id="stripe">
             <button id="reset">New Colors</button>
             <span id="message"></span>
-            <button>Easy</button>
-            <button>Hard</button>
+            <button id="easyBtn" class="mode">Easy</button>
+            <button id="hardBtn" class="mode selected">Hard</button>
         </div>
         <div id="container">
             <div class="square"></div>
