--- a/19-jQuery-todo/index.html
+++ b/19-jQuery-todo/index.html
@@ -1,24 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Todo List</title>
-    <script src="assets/js/lib/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="assets/css/todos.css">
-</head>
-<body>
-    <div id="container">
-        <h1>Todo List</h1>
-        <input type="text" name="" id="">
-        <ul>
-            <li><span>O</span> Hi</li>
-            <li><span>O</span> Hello</li>
-            <li><span>O</span> Hello There</li>
-        </ul>
-    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Todo List</title>
+        <script src="assets/js/lib/jquery-3.3.1.min.js"></script>
+        <link rel="stylesheet" href="assets/css/todos.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Karla:400,700|Montserrat|Lora"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+            integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body>
+        <header>
+            <div id="container">
+                <h1>Todo List</h1>
+                <div id="subContainer">
+                    <input type="text" placeholder="Add a Task!" id="" />
+                    <ul>
+                        <li>
+                            <span class="checkmark"
+                                ><i class="far fa-check-circle"></i
+                            ></span>
+                            <input type="checkbox" />This is
+                            <span
+                                ><i class="fas fa-times-circle trash"></i
+                            ></span>
+                        </li>
+                        <li>
+                            <span class="checkmark"
+                                ><i class="far fa-check-circle"></i
+                            ></span>
+                            <input type="checkbox" />My
+                            <span
+                                ><i class="fas fa-times-circle trash"></i
+                            ></span>
+                        </li>
+                        <li>
+                            <span class="checkmark"
+                                ><i class="far fa-check-circle"></i
+                            ></span>
+                            <input type="checkbox" />Todo List :)
+                            <span
+                                ><i class="fas fa-times-circle trash"></i
+                            ></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="header__bg"></div>
+        </header>
 
-<script src="assets/js/todos.js"></script>
-</body>
+        <script src="assets/js/todos.js"></script>
+    </body>
 </html>
