Added a button to input tasks

--- a/19-jQuery-todo/index.html
+++ b/19-jQuery-todo/index.html
@@ -23,7 +23,12 @@
             <div id="container">
                 <h1>Todo List</h1>
                 <div id="subContainer">
-                    <input type="text" placeholder="Add a Task!" id="" />
+                    <div class="buttonInside">
+                        <input placeholder="Add a task!" type="text" />
+                        <button id="showPassword">
+                            <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                        </button>
+                    </div>
                     <ul>
                         <li>
                             <span class="checkmark"
