--- a/19-jQuery-todo/index.html
+++ b/19-jQuery-todo/index.html
@@ -30,7 +30,7 @@
                         </button>
                     </div>
                     <ul>
-                        <li>
+                        <li class="slide-fade show">
                             <span class="checkmark"
                                 ><i class="far fa-check-circle"></i
                             ></span>
@@ -39,7 +39,7 @@
                                 ><i class="fas fa-times-circle trash"></i
                             ></span>
                         </li>
-                        <li>
+                        <li class="show">
                             <span class="checkmark"
                                 ><i class="far fa-check-circle"></i
                             ></span>
@@ -48,7 +48,7 @@
                                 ><i class="fas fa-times-circle trash"></i
                             ></span>
                         </li>
-                        <li>
+                        <li class="show">
                             <span class="checkmark"
                                 ><i class="far fa-check-circle"></i
                             ></span>
